anypoint-connector-devkit/v/3.7/connector-reference-documentation.adoc
= 连接器参考文档
:keywords: devkit, reference documentation

创建连接器后，记录其功能可帮助客户有效使用连接器，并有助于减少客户支持和培训成本。

记录连接器包括创建：

*  Javadoc参考文档 - 请参阅下面的部分
* 自述文件，用例和发行说明 - 请参阅 link:/anypoint-connector-devkit/v/3.7/packaging-your-connector-for-release[打包发布的连接器]中的"Documenting with Use Cases"

Anypoint Studio简化了创建参考文档的工作。

Mule构建于 link:http://en.wikipedia.org/wiki/Javadoc[的Javadoc]之上，为您的连接器自动化和简化技术参考文档的创建，添加自定义Javadoc doclet和一些特定于DevKit的Java注释。本文档介绍如何生成文档以及包含哪些内容。

== 先决条件

本文档假定您熟悉Anypoint Studio和Javadoc。它还假定您已经开发并测试了连接器。

== 生成文档

无论何时构建连接器，DevKit都会自动创建一个HTML文件，作为您在代码中添加的Javadoc注释的用户友好引用。可以通过在包资源管理器中右键单击项目来预览此文档，然后选择*Anypoint Connector*> *Preview Documentation*。

此生成的文档可以在您的项目的`target/apidocs`目录中找到。打开文件`index.html`以显示完整生成的文档。

image:devkit_doc_screenshot.png[devkit_doc_screenshot]

文档始终包含以下内容：

*  Mule XML配置文档
* 直接从Java调用连接器方法的参考文档
* 一个（样板）指南，用于在Mule中安装连接器

在构建连接器时，请查看生成的文档以确保内容正确无误。如果您发现生成的文档不够用，您可以随时在代码中的Javadoc注释中包含更多细节。

== 记录注释

以下各节介绍可在Anypoint DevKit中用于记录连接器的注释。

[NOTE]
但是，文档不是强制性的，除非您禁用Javadoc Check，否则显示错误。要禁用Javadoc Check并将错误显示为警告，请右键单击您的项目，然后单击*Anypoint Connector*> *Disable Javadoc check*。

=== 所需的连接器元数据：@Connector和@Author

每个使用`@Connector`注释的课程都应该有一个类级别的Javadoc注释，并对这些扩展进行高级概述。这可能还包括`@Author`注释。

[source, java, linenums]
----
/**
 * Anypoint Connector
 *
 * @author MuleSoft, Inc.
 */
@Connector(name="barn", schemaVersion="1.0", friendlyName="Barn", minMuleVersion="3.6")
public class BarnConnector
{
  ...
----

=== 文档化@Configurable属性

`@Configurable`注释可以通过简单解释该属性的Javadoc注释来记录。

[source, java, linenums]
----
/**
 * The username to access the service
 */
 @Configurable
 private String username;

/**
 * The password to access the service
 */
 @Configurable
 private String password;

/**
 * The API endpoint;
 */
 @Configurable
 private String apiEndpoint;
----

=== 记录@Processor方法和参数：@param和@return

每个用@Processor或@Source注释的方法（用于流式API）应该有一个Javadoc注释，其中包含以下内容：

* 该方法的使用说明
* 指向Mule中元素的XML代码示例的指针（如下所述）
* 对于该方法的每个参数，一个Javadoc `@param`注释，以及参数的描述

如果该方法的返回类型不是`void`，则Javadoc `@return`注释将包含对返回值的描述。

[source, java, linenums]
----
/**
 * Custom processor that places an animal in the barn.
 *
 * {@sample.xml ../../../doc/barn-connector.xml.sample barn:putInBarn}
 *
 * @param animal Name of the animal to be place in the barn
 * @return returns processed message
 */
 @Processor
 public String putInBarn(String animal)
 {
     return animal + "has been placed in the barn";
 }
----

=== 必需的XML代码示例：@ sample.xml

`@sample.xml`注释指向一个XML片段，演示如何在Mule的XML中使用此方法。然后，此示例将在生成的DevKit文档中提供。

DevKit还对`@sample.xml`注释引用的XML代码进行完整性检查，以确保XML示例能够成功解析连接器生成的模式。

下面的示例中显示了注释的语法。

[source, xml, linenums]
----
{@sample.xml xml-location tag-name}
----

传递给`@sample.xml`的参数如下所示：

*  `xml-location`：从`src/main/java`到示例文件的相对路径。 Maven原型在您的项目`doc/project-name.xml.sample`中创建此文件;相对路径通常是`../../../`
*  `tag-name`：`.xml.sample`文件中示例的名称，格式为`myconnector:my-method-name`或`myconnector:myMethodName`。

由`@sample.xml`标记指定的示例文件必须符合下面示例中显示的结构。

[source, xml, linenums]
----
<!-- BEGIN_INCLUDE(myconnector:method-a) -->
// example here
<!-- END_INCLUDE(myconnector:method-a) -->
<!-- BEGIN_INCLUDE(myconnector:method-b) -->
// example here
<!-- END_INCLUDE(myconnector:method-b) -->
...
----

这里是上面给出的消息处理器'myGreeting'的一个例子。

[source, xml, linenums]
----
<!-- BEGIN_INCLUDE(barn:putInBarn) -->
    <barn:put-in-barn animal="#[map-payload:animal]" />
<!-- END_INCLUDE(barn:putInBarn) -->
----

== 另请参阅

将所有必需的操作添加到连接器并开发测试之后，请转到 link:/anypoint-connector-devkit/v/3.7/packaging-your-connector-for-release[打包您的连接器以便发布]。
